--- a/themes/carneirospill/templates/base.html
+++ b/themes/carneirospill/templates/base.html
@@ -33,9 +33,9 @@
   <div id="topMenu">
   
     <ul>
-    	<li><a href="{{ SITEURL }}">Home</a></li>
+    	<li><a href="{{ SITEURL }}">Início</a></li>
         <li>&ndash;</li>
-        <li><a href="{{ SITEURL }}/archives.html">Archives</a></li>
+        <li><a href="{{ SITEURL }}/archives.html">Arquivo</a></li>
         
     </ul>
   
