--- a/themes/carneirospill/static/css/style.css
+++ b/themes/carneirospill/static/css/style.css
@@ -58,7 +58,7 @@ ol {
 } 
 
 #header { 
-	background: url(../images/header.gif) no-repeat;
+	background: url(../images/header.png) no-repeat;
 	height: 109px;
 	padding: 0 10px 0 20px;
 } 
