--- a/themes/carneirospill/templates/index.html
+++ b/themes/carneirospill/templates/index.html
@@ -8,7 +8,7 @@
     <div class="blogItem">
     
       <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
-      <h3>Le {{ article.locale_date }}</h3>
+      <h3>{{ article.locale_date }}</h3>
       
       {{ article.content }}	
 
@@ -28,7 +28,7 @@
     <div class="blogItem">
     
       <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
-      <h3>Le {{ article.locale_date }}</h3>
+      <h3>{{ article.locale_date }}</h3>
       
       {{ article.summary }}	
 <h3 class="blogMeta">Por <a href="#">{{ article.author }}</a>, Categoria : <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a></h3>
