--- a/themes/carneirospill/templates/base.html
+++ b/themes/carneirospill/templates/base.html
@@ -42,6 +42,7 @@
   </div><!-- end #topMenu -->
 
   <div id="sidebar">
+    <div style="height:120px">&nbsp;</div>
   	{% if DISPLAY_PAGES_ON_MENU %}
 	<h3>Páginas</h3>
 	<ul>
