--- a/themes/carneirospill/templates/index.html
+++ b/themes/carneirospill/templates/index.html
@@ -13,15 +13,12 @@
       {{ article.content }}	
 
       
-      <h3 class="blogMeta">Por <a href="#">{{ article.author }}</a>, Categoria : <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a></h3>
-	<h3 class="blogMeta">Tags : {% for tag in article.tags %}
+      <h3 class="blogMeta">{% for tag in article.tags %}
 <span><a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a> / </span>
 {% endfor %}</h3>
-    
     </div><!-- end #blogItem -->
  {% if loop.length  > 1 %}	
         <div class="blogItem">
-                <h2>Outros artigos</h2>
         </div>
 {% endif %}
 {% else %}    
@@ -31,7 +28,9 @@
       <h3>{{ article.locale_date }}</h3>
       
       {{ article.summary }}	
-<h3 class="blogMeta">Por <a href="#">{{ article.author }}</a>, Categoria : <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a></h3>
+<h3 class="blogMeta">{% for tag in article.tags %}
+<span><a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a> / </span>
+{% endfor %}</h3>
 	<a href="{{ SITEURL }}/{{ article.url }}">Continua…</a>
       
       
