habilitando comentários via Disqus

--- a/themes/carneirospill/templates/article.html
+++ b/themes/carneirospill/templates/article.html
@@ -11,8 +11,7 @@
   {{ article.content }}	
   {% include 'twitter.html' %}
       
-      <h3 class="blogMeta">Por <a href="#">{{ article.author }}</a>, Categoria : <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a></h3>
-	<h3 class="blogMeta">Tags : {% for tag in article.tags %}
+      <h3 class="blogMeta">{% for tag in article.tags %}
 <span><a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a> / </span>
 {% endfor %}</h3>
     
@@ -20,7 +19,7 @@
 {% if DISQUS_SITENAME %}
 <div class="blogItem">
     
-      <h2>Commentaires</h2>
+      <h2>Commentários</h2>
 <div id="disqus_thread"></div>
     <script type="text/javascript">
        var disqus_identifier = "{{ article.url }}";
