--- a/themes/carneirospill/templates/article.html
+++ b/themes/carneirospill/templates/article.html
@@ -19,7 +19,7 @@
 {% if DISQUS_SITENAME %}
 <div class="blogItem">
     
-      <h2>Commentários</h2>
+      <h2>Comentários</h2>
 <div id="disqus_thread"></div>
     <script type="text/javascript">
        var disqus_identifier = "{{ article.url }}";
