--- a/themes/carneirospill/templates/index.html
+++ b/themes/carneirospill/templates/index.html
@@ -16,7 +16,25 @@
       <h3 class="blogMeta">{% for tag in article.tags %}
 <span><a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a> / </span>
 {% endfor %}</h3>
+
     </div><!-- end #blogItem -->
+    
+{% if DISQUS_SITENAME %}
+<div class="blogItem">
+    
+      <h2>Comentários</h2>
+<div id="disqus_thread"></div>
+    <script type="text/javascript">
+       var disqus_identifier = "{{ article.url }}";
+       (function() {
+       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+       dsq.src = 'http://{{ DISQUS_SITENAME }}.disqus.com/embed.js';
+       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      })();
+    </script>
+  </div>
+{% endif %}
+                                            
  {% if loop.length  > 1 %}	
         <div class="blogItem">
         </div>
