--- a/themes/carneirospill/static/css/style.css
+++ b/themes/carneirospill/static/css/style.css
@@ -1,7 +1,18 @@
 * { margin: 0; padding: 0; }
 
-/* *** General Styles *** */
+div.highlight pre {
+    background-color: white;
+    border-style: solid;
+    border-color: block;
+    border-width: 1px;
+    margin: 0px 0px 10px;
+        margin-top: 0px;
+        margin-right: 0px;
+        margin-bottom: 10px;
+        margin-left: 0px;
+}
 
+/* *** General Styles *** */
 body  {
 	background: url(../images/background.jpg);
 	color: #293331;
