--- a/themes/carneirospill/static/css/style.css
+++ b/themes/carneirospill/static/css/style.css
@@ -223,3 +223,36 @@ ol {
     font-size: 1px;
     line-height: 0px;
 }
+
+ul.tagcloud {
+  list-style: none;
+    padding: 0;
+}
+
+ul.tagcloud li {
+    display: inline-block;
+}
+
+li.tag-1 {
+    font-size: 180%;
+}
+
+li.tag-2 {
+    font-size: 150%;
+}
+
+li.tag-3 {
+    font-size: 120%;
+}
+
+li.tag-4 {
+    font-size: 110%;
+}
+
+li.tag-5 {
+    font-size: 100%;
+}
+
+li.tag-6 {
+    font-size: 90%;
+}
