--- a/themes/carneirospill/templates/base.html
+++ b/themes/carneirospill/templates/base.html
@@ -68,13 +68,14 @@
                 {% endfor %}
                 </ul>
         {% endif %}
-        <h3>Tags</h3>
-        <ul>
-        {% for tag, articles in tags | sort %}
-                <li><a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a></li>
-        {% endfor %}
-        </ul>
-    
+        <h3>Tag cloud</h3>
+        <ul class="tagcloud">
+            {% for tag in tag_cloud %}
+                <li class="tag-{{ tag.1 }}"
+                         ><a href="{{ SITEURL }}/{{ tag.0.url }}"
+                                        >{{ tag.0 }}</a></li>
+            {% endfor %}
+        </ul>        
   
   </div><!-- end #sidebar -->
 
