Post sobre tag cloud

--- a/themes/carneirospill/templates/base.html
+++ b/themes/carneirospill/templates/base.html
@@ -68,7 +68,7 @@
                 {% endfor %}
                 </ul>
         {% endif %}
-        <h3>Tag cloud</h3>
+        <h3>Assuntos</h3>
         <ul class="tagcloud">
             {% for tag in tag_cloud %}
                 <li class="tag-{{ tag.1 }}"
