--- a/themes/carneirospill/templates/base.html
+++ b/themes/carneirospill/templates/base.html
@@ -70,7 +70,7 @@
         {% endif %}
         <h3>Tags</h3>
         <ul>
-        {% for tag, articles in tags %}
+        {% for tag, articles in tags|sort %}
                 <li><a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a></li>
         {% endfor %}
         </ul>
